# warc2graph

./: .gitignore  CHANGELOG  README.md  README.rst  linkextraction.py  requirements.txt  setup.cfg  setup.py
docs/source/: graphs.py  usage.rst
tests/: test_graphs.py  test_linkextraction.py  test_networks.py  test_warc2graph.py
warc2graph/: .gitignore  COPYING.LGPL  __init__.py  cli.py  graphs.py  networks.py  setup.cfg  warc2graph.py
warc2graph/docs/source/: conf.py
warc2graph/tests/: __init__.py
warc2graph/warc2graph/: linkextraction.py
