# This file is part of warc2graph.
#
# warc2graph is free software: you can redistribute it and/or modify
# it under the terms of the GNU Lesser General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# warc2graph is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with warc2graph.  If not, see <https://www.gnu.org/licenses/>.

[metadata]
name = warc2graph
version = 0.1
url = https://github.com/dla-marbach/warc2graph
author = Pascal Hein, Mona Ulrich, Claus-Michael Schlesinger, André Blessing
author_email = pascal.hein@ilw.uni-stuttgart.de
license = LGPL v3
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing :: Markup :: HTML
description = Warc2graph extracts a graph data structure from WARC files.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
packages = warc2graph
install_requires =
    numpy == 1.19.5; python_version < "3.7"
    beautifulsoup4 >= 4.9.3
    matplotlib >= 3.3.3
    networkx >= 2.5
    selenium >= 3.141.0
    setuptools >= 51.0.0
    warcio >= 1.7.4
    webdriver-manager >= 3.3.0

[options.entry_points]
console_scripts =
    warc2graph = warc2graph.cli:main

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"